[package]
name = "shurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.10", features = ["cargo", "derive", "env"] }
env_logger = { version = "0.10.1", default-features = false }
log = "0.4.20"
poem = "1.3.59"
serde = { version = "1.0.193", features = ["derive"] }
serde_cbor = "0.11.2"
sled = "0.34.7"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
urlencoding = "2.1.3"
