[package]
name = "shurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

base64 = "0.22.0"
clap = { version = "4.5.4", features = ["cargo", "derive", "env"] }
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.21"
poem = "2.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_cbor = "0.11.2"
sled = "0.34.7"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
urlencoding = "2.1.3"
